--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "homepage": "http://ashishdotme.github.io/react-todo",
   "private": false,
   "dependencies": {
+    "husky": "0.14.3",
+    "lint-staged": "^7.3.0",
+    "prettier": "^1.14.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-bulma-components": "2.0.0",
@@ -14,12 +17,19 @@
     "redux": "^4.0.0"
   },
   "scripts": {
+    "precommit": "lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
   },
   "devDependencies": {
     "gh-pages": "^2.0.0"
