--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "homepage": "http://ashishdotme.github.io/react-todo",
   "private": false,
   "dependencies": {
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^2.7.0",
     "husky": "0.14.3",
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3",
+    "pretty-quick": "^1.7.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-bulma-components": "2.0.0",
@@ -28,6 +31,7 @@
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
       "prettier --single-quote --write",
+      "pretty-quick --staged",
       "git add"
     ]
   },
